Solve day 7